Modificações no back-end e front-end #1
Modificado index.html para index.jsp e alterado cor do parágrafo do
slide para brnaco

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -7,6 +7,16 @@
 /*=========================================== 
  * Importing CSS Libraries
  *===========================================*/
+ 
+ /* BEGIN CUSTOM CSS */
+ 
+ .texto-branco
+ {
+ 	color: #fff;
+ }
+ 
+ /* END CUSTOM CSS */
+ 
 article,
 aside,
 details,
