--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -14,6 +14,10 @@
  {
  	color: #fff;
  }
+ #produto-min-height-530px
+ {
+ 	min-height: 530px;
+ }
  
  /* END CUSTOM CSS */
  
@@ -2252,7 +2256,7 @@ form textarea {
   content: " ";
   width: 7px;
   height: 5px;
-  background: url(../images/arrow.png) no-repeat;
+  background: url(../image/arrow.png) no-repeat;
   display: inline-block;
   margin-left: 10px;
   margin-right: 10px;
@@ -2264,6 +2268,7 @@ form textarea {
   margin-top: -40px;
   margin-bottom: 30px;
   background: #2b2b2b;
+  clear: both;
 }
 .home-slider .slides {
   *zoom: 1;
