--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,4 +1,14 @@
 /*--Style Custom--*/
+.lazy-img img{
+    opacity: 0;
+    max-width: 100%;
+    max-height: 100%;
+}
+ 
+.lazy-img img.loaded{
+    opacity: 1;
+    transition: opacity 1s;
+}
 #msg-erro
 {
     color: #FF7F00;
